A fuckton of stuff.

--- a/GZDoomIDE/Windows/AboutBox.resx
+++ b/GZDoomIDE/Windows/AboutBox.resx
@@ -121,6 +121,8 @@
     <value>GZDoom IDE (C) 2018 Chronos Ouroboros
 Licensed under the GPL version 2
 
+Silk icons by Mark James (CC-BY 2.5, http://www.famfamfam.com/lab/icons/silk/)
+
 Libraries used:
 DockPanelSuite by Weifen Luo et al. (MIT License)
 DockPanelSuite.ThemeVS2015 by Weifen Luo et al. (MIT License)
